--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 SPOTIFY_CLIENT_ID=xxx
 SPOTIFY_CLIENT_SECRET=xxx
-SPOTIFY_REDIRECT_URI=https://ton-app.render.com/callback
+SPOTIFY_REDIRECT_URI=https://spotify-auth-server-pori.onrender.com/callback
